--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".WeatherForeCast"></activity>
+        <activity android:name=".DisplayWeatherActivity"></activity>
+        <activity android:name=".WeatherForeCast" />
         <activity android:name=".GreetingActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
