--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,10 @@ dependencies {
     androidTestImplementation 'androidx.test:rules:1.3.0'
     androidTestImplementation 'androidx.test.espresso:espresso-intents:3.3.0'
 
+    // hilt
+    implementation 'com.google.dagger:hilt-android:2.28-alpha'
+    androidTestImplementation 'com.google.dagger:hilt-android-testing:2.28-alpha'
+    annotationProcessor 'com.google.dagger:hilt-android-compiler:2.28-alpha'
+    androidTestAnnotationProcessor 'com.google.dagger:hilt-android-compiler:2.28-alpha'
+
 }
