--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,10 @@ dependencies {
     annotationProcessor 'com.google.dagger:hilt-android-compiler:2.28-alpha'
     androidTestAnnotationProcessor 'com.google.dagger:hilt-android-compiler:2.28-alpha'
 
+    // mockito
+    testImplementation 'org.mockito:mockito-core:1.10.19'
+    androidTestImplementation 'org.mockito:mockito-core:1.10.19'
+    androidTestImplementation 'com.google.dexmaker:dexmaker:1.2'
+    androidTestImplementation 'com.google.dexmaker:dexmaker-mockito:1.2'
+
 }
