--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,7 @@ dependencies {
     // hilt with MVVM
     annotationProcessor 'androidx.hilt:hilt-compiler:1.0.0-alpha02'
     implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha02'
+
+    // Volley (HTTP library)
+    implementation 'com.android.volley:volley:1.1.1'
 }
