--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -14,6 +14,7 @@ check_android_task:
   start_emulator_background_script:
     $ANDROID_SDK_ROOT/emulator/emulator -avd test -no-window -gpu swiftshader_indirect -no-snapshot -no-audio -no-boot-anim -camera-back none
   build_script: |
+    echo $KEYS > app/src/main/res/values/keys.xml
     chmod +x gradlew
     ./gradlew assembleDebugAndroidTest
   wait_for_emulator_script: |
